--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap-5.1.3.min.css" />
 
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
 
     <!-- Datatable -->
     <script src="js/jquery.dataTables-1.12.1.min.js"></script>
